--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ nav{
     width: 30px;
 }
 .sub-icons{
+    position: relative;
+    right: 60%;
+    margin-left: 8px;
     min-width:30px;
     height: 30px;
     cursor: pointer;
@@ -156,6 +159,25 @@ main{
 .mobile-menu.active .line3{
     transform: rotate(-45deg) translate(-5px, -7px);
 }
+.titulo-scroll-bar{
+    display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.titulo-scroll-bar h1{
+    position: relative;
+    left:5.5%;
+    font-size: 20px;
+    color: #3834ff;
+    cursor: pointer;
+}
+.titulo-scroll-bar h2{
+    position: absolute;
+    right: 5.5%;
+    font-size: 20px;
+    color: #3834ff;
+    cursor: pointer;
+}
 
 .main-scroll-div{
     width: 100%;
@@ -172,24 +194,24 @@ main{
 }
 
 .cover::before{
-    position: absolute;
+    position: relative;
     content: "";
     left: 0;
     top: 0;
     z-index: 99;
     height: 100%;
-    width: 150px;
+    width: 100px;
     background-image: linear-gradient(90deg, black, transparent);
 }
 
 .cover::after{
-    position: absolute;
+    position: relative;
     content: "";
     right: 0;
     top: 0;
     z-index: 99;
     height: 100%;
-    width: 150px;
+    width: 100px;
     background-image: linear-gradient(-90deg, black, transparent);
 }
 
