--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav{
 .search-box{
     background: #59319b;
     height: 10px;
-    width: 300px;
+    width: 500px;
     padding: 10px;
     border-radius: 40px;
     display: flex;
@@ -125,6 +125,7 @@ main{
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
+        z-index: 1000;
     }
     .nav-list li{
         margin-left: 0;
@@ -149,15 +150,22 @@ main{
         transform: translateX(0);
     }
 }
+.user{
+    display: flex;
+    cursor: pointer;
+}
+.user h1{
+    font-size: 20px;
+}
 
 .mobile-menu.active .line1{
-    transform: rotate(-45deg) translate(-8px, 8px);
+    transform: rotate(-90deg) translate(-8px, 10px);
 }
 .mobile-menu.active .line2{
-    opacity: 0;
+    transform: rotate(-90deg) translate(2px, 20px);
 }
 .mobile-menu.active .line3{
-    transform: rotate(-45deg) translate(-5px, -7px);
+    transform: rotate(-90deg) translate(12px, 30px);
 }
 .titulo-scroll-bar{
     display: flex;
@@ -166,21 +174,22 @@ main{
 }
 .titulo-scroll-bar h1{
     position: relative;
-    left:5.5%;
+    left:13.5%;
     font-size: 20px;
     color: #3834ff;
     cursor: pointer;
 }
 .titulo-scroll-bar h2{
     position: absolute;
-    right: 5.5%;
+    right: 15%;
     font-size: 20px;
     color: #3834ff;
     cursor: pointer;
 }
 
 .main-scroll-div{
-    width: 100%;
+    padding-left: 9%;
+    width: 80%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -225,6 +234,12 @@ main{
     position: relative;
     scroll-behavior: smooth;
 }
+.scroll-images h1{
+    font-size: 20;
+    position: relative;
+    bottom: 1;
+    
+}
 
 .child{
     min-width:300px;
@@ -244,12 +259,17 @@ main{
     height: 100%;
 
 }
+.icon-img{
+    width: 100%;
+    height: 100%;
+}
 .icon{
-    background: none;
-    font-size: 50px;
+    background: rgb(211, 211, 211);
+    font-size: 20px;
     outline: none;
     border: none;
-    padding: opx 20px;
+    border-radius: 100px ;
+    padding: 5px;
     cursor: pointer;
 }
 
