--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    max-width: 100vw;
+    height: 100vh;
+    background-color: rgb(236, 236, 236);
 }
 
 a{
@@ -17,7 +24,13 @@ a:hover{
     font-size: 24px;
     font-family:Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
-    display: inline-flex;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+}
+
+.logo>img{
+    max-height: 100%;
 }
 
 nav{
@@ -62,19 +75,23 @@ nav{
 
 .search-box{
     background: #59319b;
-    height: 10px;
     width: 500px;
-    padding: 10px;
+    padding: 5px 10px;
     border-radius: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+.search-box>a{
+    width: 20px;
+    height: 20px;
+}
+
 .search-txt{
     border: none;
     background: none;
     outline: none;
-    padding: 0;
     color:rgb(255, 239, 239) ;
 }
 
@@ -275,4 +292,269 @@ main{
 
 .icon:hover{
     color: aqua;
+}
+
+/* ESTILOS DA TELA DE FILMES */
+.container{
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 980px;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+}
+
+.resumo-section{
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.resumo-section>img{
+    max-width: 25%;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px #00000057;
+}
+
+.resumo{
+    max-width: 100%;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(236, 236, 236);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.info-nota>a{
+    font-weight: bold;
+    color: #7000FF;
+}
+
+.info-nota>p{
+    font-weight: bold;
+}
+
+.nota{
+    font-size: 80px;
+}
+
+.cor-nota{
+    color: #7DA900;
+}
+
+.informacoes-section{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    gap: 10px;
+}
+
+.informacoes-section>img{
+    max-width: 40%;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px #00000057;
+}
+
+.informacoes{
+    width: 100%;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(236, 236, 236);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+
+.informacoes>hr{
+    border: none;
+    width: 200px;
+    height: 2px;
+    background-color: #914EFF;
+}
+
+.informacoes>ul{
+    list-style: none;
+    text-align: left;
+    font-weight: 400;
+}
+
+.plataformas{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.plataformas>a{
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.plataformasIcons{
+    width: 100%;
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.452));
+}
+
+.comentarios{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.header-comentarios{
+    width: 100%;
+    background-color: #914EFF;
+    border-radius: 5px;
+}
+
+.header-comentarios>p{
+    box-sizing: border-box;
+    font-size: 20px;
+    padding: 5px;
+    text-align: center;
+    font-weight: 500;
+    color: #FFFFFF;
+}
+
+.comentarios>input{
+    appearance: none;
+    border: none;
+    width: fit-content;
+    border-radius: 5px;
+    padding: 2px 15px;
+    background-color: #914EFF;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    color: white;
+}
+
+
+
+.comentarioAdd{
+    font-family: 'Inter', sans-serif;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+/* header do modal */
+
+.comentarioAdd-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.usuario{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 14px;
+}
+
+.usuario>img{
+    border-radius: 50%;
+    width: 50px;
+    margin-right: 5px;
+}
+
+.notaAdd{
+    width: 290px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+.notaAdd>input{
+    appearance: none;
+    width: 200px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: #DFDFDF;
+}
+
+/* .slide::-webkit-slider-thumb{
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    background: url('onion.png');
+    cursor: pointer;
+} */
+
+#nota{
+    color: #ff3535;
+}
+
+/* body do modal */
+
+.notaAdd-body{
+    margin-top: 8px;
+}
+
+.notaAdd-body>textarea{
+    width: 100%;
+    resize: none;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #DFDFDF;
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+.notaAdd-body>textarea::placeholder{
+    color: #aaaaaa;
+}
+
+.notaAdd-body>textarea:focus{
+    outline: none;
+    color: #5c5c5c;
+}
+
+/* footer do modal */
+.modal-footer{
+    margin-top: 20px;
+    display: flex;
+    justify-content: right;
+}
+
+.modal-footer>input{
+    appearance: none;
+    margin-left: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #eeeeee;
+}
+
+.modal-footer>input:nth-child(1) {
+    background-color: #914EFF;
+    padding: 10px 25px;
+}
+
+.modal-footer>input:nth-child(1):hover {
+    background-color: #8145e0;
+    cursor: pointer;
 }
