--- a/loginStyle.css
+++ b/loginStyle.css
@@ -38,7 +38,8 @@ body{
     gap: 10px;
     background-color: white;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.281);
-    padding: 10px;
+    padding: 15px;
+    padding-top: 10px;
     width: 450px;
     border-radius: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -55,7 +56,7 @@ body{
     width: 100%;
     border-radius: 5px;
     padding: 15px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #ede1ff;
 }
 
@@ -73,7 +74,7 @@ body{
     width: 100%;
     border-radius: 5px;
     padding: 15px;
-    font-size: 20px;
+    font-size: 18px;
     color: #e7e7e7;
     background-color: #8439ff;
 }
