--- a/style.css
+++ b/style.css
@@ -23,10 +23,8 @@ a:hover{
 .logo{
     font-size: 24px;
     font-family:Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center; 
+    letter-spacing: 0px;
+    display: inline-flex;
 }
 
 .logo>img{
@@ -75,8 +73,9 @@ nav{
 
 .search-box{
     background: #59319b;
+    height: 10px;
     width: 500px;
-    padding: 5px 10px;
+    padding: 10px;
     border-radius: 40px;
     display: flex;
     justify-content: space-between;
@@ -92,7 +91,9 @@ nav{
     border: none;
     background: none;
     outline: none;
+    padding: 0;
     color:rgb(255, 239, 239) ;
+    width: 500px;
 }
 
 main{
@@ -170,38 +171,72 @@ main{
 .user{
     display: flex;
     cursor: pointer;
+    color: aliceblue;
 }
 .user h1{
     font-size: 20px;
+    color: aliceblue;
 }
 
 .mobile-menu.active .line1{
-    transform: rotate(-90deg) translate(-8px, 10px);
+    transform: rotate(-45deg) translate(-8px, 8px);
 }
 .mobile-menu.active .line2{
-    transform: rotate(-90deg) translate(2px, 20px);
+    opacity: 0;
 }
 .mobile-menu.active .line3{
-    transform: rotate(-90deg) translate(12px, 30px);
+    transform: rotate(45deg) translate(-5px, -7px);
 }
 .titulo-scroll-bar{
     display: flex;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+.lateral-bars{
+    background-color: rgb(214, 214, 214);
+    box-sizing: border-box;
+}
+.lateral-bars .left{
+    position: absolute;
+    left: 0px;
+    background-color: #d4d4d4;
+    width: 13%;
+    height: 250ch;
+    z-index: 10;
+    box-shadow: inset -10px 0px 10px #707070;
+}
+.lateral-bars .right{
+    height: 250ch;
+    position: absolute;
+    right: 0px;
+    width: 15%;
+    background-color: #d4d4d4;
+    z-index: 10;
+    box-shadow: inset 10px 0px 10px #707070;
+}
 .titulo-scroll-bar h1{
     position: relative;
+    text-align: center;
+    width: 130px;
     left:13.5%;
     font-size: 20px;
-    color: #3834ff;
+    color: #ffffff;
+    background-color: #59319b;
     cursor: pointer;
+    margin: 3px;
+    border-radius: 5px;
 }
 .titulo-scroll-bar h2{
     position: absolute;
-    right: 15%;
+    text-align: center;
+    width: 90px;
+    right: 15.5%;
     font-size: 20px;
-    color: #3834ff;
     cursor: pointer;
+    color: #ffffff;
+    background-color: #59319b;
+    margin: 3px;
+    border-radius: 5px;
 }
 
 .main-scroll-div{
@@ -252,18 +287,23 @@ main{
     scroll-behavior: smooth;
 }
 .scroll-images h1{
-    font-size: 20;
-    position: relative;
-    bottom: 1;
-    
+    font-size: 50;
+    position: absolute;
+    bottom: 0;
+    background-color: #470068;
+    /*width: 21.9%;*/
+    width: 13.2ch;
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .child{
+    z-index: 250;
     min-width:300px;
     height: 450px;
-    margin: 1px 10px;
+    margin: 0px 10px;
     cursor: pointer;
-    border: 1px solid white;
+    border: 0px solid white;
     overflow: hidden;
 }
 .scroll-images::-webkit-scrollbar{
@@ -272,15 +312,19 @@ main{
 }
 
 .child-img{
+    z-index: 250;
     width: 100%;
     height: 100%;
 
 }
 .icon-img{
+    z-index: 250;
     width: 100%;
     height: 100%;
 }
 .icon{
+    position: relative;
+    z-index: 250;
     background: rgb(211, 211, 211);
     font-size: 20px;
     outline: none;
