--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ main{
 }
 
 .nav-list li{
-    letter-spacing: 3px;
+    letter-spacing: 0px;
     margin-left: 32px;
     color: #fff;
 }
@@ -173,6 +173,7 @@ main{
     color: aliceblue;
 }
 .user h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     color: aliceblue;
 }
